--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+div.content p a {
+  border-bottom: 1px solid #508181;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,9 +8,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding: 50px;
+
   font-family: sans-serif;
-  background-color: #ffd3e8;
+  background-color: #fdf0e3;
 }
 .taskhidden {
   display: none;
@@ -29,11 +32,12 @@ code {
 }
 
 input {
+  margin-top: 20px;
   padding: 10px;
   font-size: 16px;
-  border: 2px solid #fff;
+  border: 1px solid #ffd7d5;
   width: 165px;
-  background-color: lightgray;
+  background-color: #e8d7ff;
 }
 
 button {
@@ -44,6 +48,7 @@ button {
   background-color: #0066ff;
   color: #fff;
   border: 2px solid #0066ff;
+  border-radius: 2px;
 }
 button:hover {
   background-color: #003399;
@@ -59,13 +64,10 @@ button:hover {
   background-color: #0066ff;
   color: #fff;
   border: 2px solid #0066ff;
+  transform: translateX(150px);
+  border-radius: 2px;
 }
-/* .todoListMain .theList {
-  list-style: none;
-  color: red;
-  padding-left: 0;
-  width: 250px;
-} */
+
 .task {
   display: flex;
 }
@@ -93,19 +95,17 @@ li {
   margin-bottom: 10px;
   border-radius: 5px;
   display: flex;
+  width: 360px;
   transition: background-color 0.2s ease-out;
 }
 
 li:hover {
   background-color: pink;
   cursor: pointer;
-}
-
-li:hover {
   -webkit-box-shadow: 10px 10px 41px -18px rgba(0, 0, 0, 0.64);
   -moz-box-shadow: 10px 10px 41px -18px rgba(0, 0, 0, 0.64);
   box-shadow: 10px 10px 41px -18px rgba(0, 0, 0, 0.64);
-  color: #ffffff;
+
   cursor: pointer;
 }
 .todo-list {
@@ -119,4 +119,36 @@ li:hover {
   -moz-box-shadow: 10px 10px 41px -18px rgba(0, 0, 0, 0.64);
   box-shadow: 10px 10px 41px -18px rgba(0, 0, 0, 0.64);
   background-color: #ffd7d5;
+  border-radius: 5px;
+  margin-top: -350px;
+  margin-left: 100px;
+  /* overflow-y: scroll; */
+}
+
+p {
+  width: 50px;
+}
+
+.cat {
+  background-image: url("./7d2aa1087e87d2bea6b7e8c27e592019.gif");
+  width: 500px;
+  height: 400px;
+  border: 0;
+  transform: translate(600px, 100px);
+}
+
+.nav {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  background-color: #ffd7d5;
+  height: 50px;
+  justify-content: space-evenly;
+  vertical-align: middle;
+}
+
+.nav-item {
+  all: unset;
 }
